--- a/libft/Makefile
+++ b/libft/Makefile
@@ -16,7 +16,7 @@ SRCS = \
     str/ft_strchr.c str/ft_strdup.c str/ft_striteri.c str/ft_strjoin.c \
     str/ft_strlcat.c str/ft_strlcpy.c str/ft_strlen.c str/ft_strmapi.c \
     str/ft_strncmp.c str/ft_strnstr.c str/ft_strrchr.c str/ft_strtrim.c \
-    str/ft_substr.c str/ft_tolower.c str/ft_toupper.c \
+    str/ft_substr.c str/ft_tolower.c str/ft_toupper.c str/ft_strcmp.c \
     util/ft_atoi.c util/ft_bzero.c util/ft_calloc.c util/ft_isalnum.c \
     util/ft_isalpha.c util/ft_isascii.c util/ft_isdigit.c util/ft_isprint.c \
     util/ft_itoa.c util/ft_split.c util/ft_free_split.c \
