--- a/src/game/Makefile
+++ b/src/game/Makefile
@@ -1,17 +1,15 @@
-NAME = game
+NAME = game.a
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -I./lib -I./libft -I./get_next_line
+CFLAGS = -Wall -Wextra -Werror -I./ -I../../libft -I../../get_next_line -I../../lib -I../../minilibx-linux
 
-MLXFLAGS = -L minilibx-Linux -lmlx -lXext -lX11 -lm
-
-SRC = main.c \
+SRC = game_engine.c \
       init/init_game.c \
       key_operation/handle_key.c \
-	  key_operation/move.c \
+      key_operation/move.c \
       render/render_algo.c \
       render/render.c \
-      utils/utils.c
+      utils/game_utils.c
 	  
 OBJDIR = obj
 OBJ = $(patsubst %.c,$(OBJDIR)/%.o,$(SRC))
@@ -19,12 +17,11 @@ OBJ = $(patsubst %.c,$(OBJDIR)/%.o,$(SRC))
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) $(MLXFLAGS) -o $(NAME)
+	@ar rcs $@ $^
 
 $(OBJDIR)/%.o: %.c
 	@mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -c $< -o $@
-
 
 clean:
 	rm -rf $(OBJDIR)
