--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
 		"parse.h": "c",
 		"ft_printf.h": "c",
 		"mlx.h": "c",
-		"get_next_line.h": "c"
+		"get_next_line.h": "c",
+		"math.h": "c"
 	},
 	"makefile.configureOnOpen": true
 }
