--- a/src/parse/Makefile
+++ b/src/parse/Makefile
@@ -10,7 +10,8 @@ SRC = check_texture_new.c \
       parse_maps.c \
       utils.c \
       valid_map.c \
-      exit_invalid_maps.c
+      exit_invalid_maps.c \
+      exit_parse.c
 
 OBJDIR = obj
 OBJ = $(patsubst %.c,$(OBJDIR)/%.o,$(SRC))
