--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
 		"ft_printf.h": "c",
 		"mlx.h": "c",
 		"get_next_line.h": "c",
-		"math.h": "c"
+		"math.h": "c",
+		"fcntl.h": "c"
 	},
 	"makefile.configureOnOpen": true
 }
