--- a/src/game/Makefile
+++ b/src/game/Makefile
@@ -7,10 +7,13 @@ SRC = game_engine.c \
       init/init_game.c \
       key_operation/handle_key.c \
       key_operation/move.c \
-      render/render_algo.c \
+	  render/dda.c \
+	  render/init_dda.c \
+	  render/utils.c \
+	  render/calculate.c \
       render/render.c \
       render/b_render.c \
-      utils/game_utils.c
+      utils/close_window.c
 	  
 OBJDIR = obj
 OBJ = $(patsubst %.c,$(OBJDIR)/%.o,$(SRC))
